<resources>
    <string name="app_name">Practicum-Android-Diploma</string>
    <string name="main">Главная</string>
    <string name="favorite">Избранное</string>
    <string name="team">Команда</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="whoMakeIt">Над приложением работали</string>
    <string name="developer_1">Киселев Алексей Викторович</string>
    <string name="developer_2">Серпухов Андрей Александрович</string>
    <string name="developer_3">Калмыков Андрей Дмитриевич</string>
    <string name="developer_4">Вебер Андрей Дмитриевич</string>
    <string name="empty_list">Список пуст</string>
    <string name="job">Вакансия</string>
    <string name="required_experience">Требуемый опыт</string>
    <string name="job_description">Описание вакансии</string>
    <string name="main_skills">Ключевые навыки</string>
    <string name="contacts">Контакты</string>
    <string name="employer_contacts">Контактное лицо</string>
    <string name="email">E-mail</string>
    <string name="phone_number">Телефон</string>
    <string name="comment">Комментарий</string>
    <string name="similar_jobs">Похожие вакансии</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="error_list_favorite">Не удалось получить \n список вакансий</string>
    <string name="search_vacancies">Поиск вакансий</string>
    <string name="enter_request">Введите запрос</string>
    <string name="internet_connection_issue">Нет интернета</string>
    <string name="vacancy_mismatch">Таких вакансий нет</string>
    <string name="founded">Найдено %s вакансий</string>
    <string name="filter_settings">Настройки фильтрации</string>
    <string name="place_of_work">Место работы</string>
    <string name="sector">Отрасль</string>
    <string name="et_expected_salary">Ожидаемая зарплата</string>
    <string name="input_summ">Введите сумму</string>
    <string name="show_with_salary">Не показывать без зарплаты</string>
    <string name="back_btn">Кнопка назад</string>
    <string name="country_selection">Выбор страны</string>
    <string name="russia">Россия</string>
    <string name="ukraina">Украина</string>
    <string name="kazakstan">Казахстан</string>
    <string name="azerbaijan">Азербайджан</string>
    <string name="belarus">Беларусь</string>
    <string name="georgia">Грузия</string>
    <string name="kyrgyzstan">Кыргыстан</string>
    <string name="uzbekistan">Узбекистан</string>
    <string name="other_country">Другие регионы</string>
    <string name="choos_place_of_work">Выбор места работы</string>
    <string name="country">Страна</string>
    <string name="region">Регион</string>
    <string name="similar_job">Похожие вакансии</string>
    <string name="choosing_region">Выбор региона</string>
    <string name="enter_region">Введите регион</string>
    <string name="there_is_no_such_region">Такого региона нет</string>
    <string name="failed_to_get_the_list">Не удалось получить список</string>
    <string name="error">Ошибка</string>
    <string name="no_internet">Нет интернета</string>
    <string name="choosing_industry">Выбор отрасли</string>
    <string name="enter_industry">Введите отрасль</string>
    <string name="empty_salary">зарплата не указана</string>
    <string name="btn_accept">Применить</string>
    <string name="btn_reset">Сбросить</string>
    <string name="choose">Выбрать</string>
    <string name="RUR">₽</string>
    <string name="USD">$</string>
    <string name="AZN">₼</string>
    <string name="BYR">Br</string>
    <string name="EUR">€</string>
    <string name="GEL">₾</string>
    <string name="KGS">с</string>
    <string name="KZT">₸</string>
    <string name="UAH">₴</string>
    <string name="UZS">soʻm</string>
    <string name="full_salary">от %s до %s</string>
    <string name="salary_from">от %s</string>
    <string name="salary_to">до %s</string>
    <string name="from">от</string>
    <string name="to">до</string>
    <string name="there_is_no_such_industry">Такой отрасли нет</string>
</resources>