<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".filter.presentation.CountrySelectionFragment">

    <LinearLayout
        android:id="@+id/ll_top_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_16dp"
        android:gravity="center_vertical"
        android:minHeight="@dimen/minHeightToolBar_64dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ib_arrow_back"
            style="@style/imageBtnJobStyle"
            android:layout_marginStart="@dimen/margin_4dp"
            android:contentDescription="@string/back_btn"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            style="@style/job22Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_4dp"
            android:layout_weight="1"
            android:text="@string/country_selection" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_russia"
        style="@style/MenuPointsStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightPoints_60dp"
        android:paddingHorizontal="@dimen/margin_16dp"
        android:text="@string/russia"
        app:drawableEndCompat="@drawable/ic_arrow_forward_24px" />

    <TextView
        android:id="@+id/tv_ukraina"
        style="@style/MenuPointsStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightPoints_60dp"
        android:paddingHorizontal="@dimen/margin_16dp"
        android:text="@string/ukraina"
        app:drawableEndCompat="@drawable/ic_arrow_forward_24px" />

    <TextView
        android:id="@+id/tv_kazakstan"
        style="@style/MenuPointsStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightPoints_60dp"
        android:paddingHorizontal="@dimen/margin_16dp"
        android:text="@string/kazakstan"
        app:drawableEndCompat="@drawable/ic_arrow_forward_24px" />

    <TextView
        android:id="@+id/tv_azerbaijan"
        style="@style/MenuPointsStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightPoints_60dp"
        android:paddingHorizontal="@dimen/margin_16dp"
        android:text="@string/azerbaijan"
        app:drawableEndCompat="@drawable/ic_arrow_forward_24px" />

    <TextView
        android:id="@+id/tv_belarus"
        style="@style/MenuPointsStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightPoints_60dp"
        android:paddingHorizontal="@dimen/margin_16dp"
        android:text="@string/belarus"
        app:drawableEndCompat="@drawable/ic_arrow_forward_24px" />

    <TextView
        android:id="@+id/tv_georgia"
        style="@style/MenuPointsStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightPoints_60dp"
        android:paddingHorizontal="@dimen/margin_16dp"
        android:text="@string/georgia"
        app:drawableEndCompat="@drawable/ic_arrow_forward_24px" />

    <TextView
        android:id="@+id/tv_kyrgyzstan"
        style="@style/MenuPointsStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightPoints_60dp"
        android:paddingHorizontal="@dimen/margin_16dp"
        android:text="@string/kyrgyzstan"
        app:drawableEndCompat="@drawable/ic_arrow_forward_24px" />

    <TextView
        android:id="@+id/tv_uzbekistan"
        style="@style/MenuPointsStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightPoints_60dp"
        android:paddingHorizontal="@dimen/margin_16dp"
        android:text="@string/uzbekistan"
        app:drawableEndCompat="@drawable/ic_arrow_forward_24px" />

    <TextView
        android:id="@+id/tv_other_country"
        style="@style/MenuPointsStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightPoints_60dp"
        android:paddingHorizontal="@dimen/margin_16dp"
        android:text="@string/other_country"
        app:drawableEndCompat="@drawable/ic_arrow_forward_24px" />
</LinearLayout>