<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".filter.presentation.FilterSettingsFragment">

    <LinearLayout
        android:id="@+id/ll_top_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_16dp"
        android:gravity="center_vertical"
        android:minHeight="@dimen/minHeightToolBar_64dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ib_arrow_back"
            style="@style/imageBtnJobStyle"
            android:layout_marginStart="@dimen/margin_4dp"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="@string/back_btn"/>

        <TextView
            style="@style/job22Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_4dp"
            android:layout_weight="1"
            android:text="@string/filter_settings" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_place_of_work"
        style="@style/MenuPointsStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightPoints_60dp"
        android:paddingHorizontal="@dimen/margin_16dp"
        android:text="@string/place_of_work"
        android:textColor="?attr/colorOnSecondary"
        app:drawableEndCompat="@drawable/ic_arrow_forward_24px" />

    <TextView
        android:id="@+id/tv_sector"
        style="@style/MenuPointsStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightPoints_60dp"
        android:paddingHorizontal="@dimen/margin_16dp"
        android:text="@string/sector"
        android:textColor="?attr/colorOnSecondary"
        app:drawableEndCompat="@drawable/ic_arrow_forward_24px" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_marginVertical="@dimen/margin_24dp"
        android:background="@drawable/background_job_name"
        android:hint="@string/et_expected_salary"
        android:paddingHorizontal="@dimen/margin_16dp"
        android:paddingVertical="@dimen/margin_8dp"
        android:textColorHint="?attr/colorOnSecondary"
        android:theme="@style/TextInputLayout"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="clear_text"
        app:expandedHintEnabled="false"
        app:hintTextAppearance="@style/textHint12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_artwork">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            style="@style/textHint16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_summ"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="?attr/colorOnSecondary" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tv_show_with_salary"
            style="@style/MenuPointsStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/heightPoints_60dp"
            android:layout_weight="1"
            android:paddingHorizontal="@dimen/margin_16dp"
            android:text="@string/show_with_salary" />

        <CheckBox
            android:id="@+id/cb_show_with_salary"
            style="@style/MenuPointsStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/blue" />
    </LinearLayout>

</LinearLayout>