<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".filter.presentation.ChoosingIndustryFragment">

    <LinearLayout
        android:id="@+id/ll_top_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="@dimen/minHeightToolBar_64dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <ImageButton
            android:id="@+id/ib_arrow_back"
            style="@style/imageBtnJobStyle"
            android:layout_marginStart="@dimen/margin_4dp"
            android:contentDescription="@string/back_btn"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            style="@style/job22Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_4dp"
            android:layout_weight="1"
            android:text="@string/choosing_industry" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_search"
        style="@style/TextInputLayout"
        android:layout_width="@dimen/zero_0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:background="@drawable/bg_et_search"
        android:gravity="center"
        android:imeOptions="actionDone"
        android:minHeight="@dimen/editTextSize_56dp"
        android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconDrawable="@drawable/search"
        app:endIconMode="custom"
        app:endIconTint="@color/black_universal"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_top_buttons">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_search"
            style="@style/textRegular16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:backgroundTint="@color/black"
            android:hint="@string/enter_industry"
            android:imeOptions="actionDone"
            android:lines="1"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_industry"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_8dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_choose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_search" />

    <ImageView
        android:id="@+id/iv_error"
        android:layout_width="@dimen/zero_0dp"
        android:layout_height="@dimen/zero_0dp"
        android:contentDescription="@string/error"
        android:scaleType="centerInside"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="223dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/error_list_favorite" />

    <TextView
        android:id="@+id/tv_error"
        style="@style/textMedium22"
        android:layout_marginTop="@dimen/margin_16dp"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_error"
        tools:text="@string/there_is_no_such_industry" />

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:indeterminateTint="@color/blue"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_search" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_choose"
        style="@style/ButtonAccept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_marginBottom="@dimen/margin_24dp"
        android:paddingHorizontal="@dimen/margin_8dp"
        android:paddingVertical="@dimen/margin_20dp"
        android:text="@string/choose"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>