<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".filter.presentation.ChoosingRegionFragment">

    <LinearLayout
        android:id="@+id/ll_top_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="@dimen/minHeightToolBar_64dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <ImageButton
            android:id="@+id/ib_arrow_back"
            style="@style/imageBtnJobStyle"
            android:layout_marginStart="@dimen/margin_4dp"
            android:contentDescription="@string/back_btn"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            style="@style/job22Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_4dp"
            android:layout_weight="1"
            android:text="@string/choosing_region" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilSearch"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/editTextSize_56dp"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:background="@drawable/bg_et_search"
        android:hint="@string/enter_region"
        android:imeOptions="actionDone"
        android:padding="@dimen/margin_4dp"
        app:layout_constraintEnd_toEndOf="@+id/rv_region"
        app:layout_constraintStart_toStartOf="@+id/rv_region"
        app:layout_constraintTop_toBottomOf="@+id/ll_top_buttons">

        <EditText
            android:id="@+id/etSearch"
            style="@style/textRegular16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="?attr/colorPrimaryContainer"
            android:drawableEnd="@drawable/search"
            android:drawablePadding="@dimen/margin_16dp"
            android:lines="1"
            android:inputType="text"
            android:paddingStart="@dimen/margin_12dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_region"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilSearch" />

    <ImageView
        android:id="@+id/ivError"
        android:layout_width="@dimen/zero_0dp"
        android:layout_height="@dimen/zero_0dp"
        android:scaleType="centerInside"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="223dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilSearch"
        android:contentDescription="@string/error"
        tools:src="@drawable/error_list_favorite" />

    <TextView
        android:id="@+id/tvError"
        style="@style/textMedium22"
        android:layout_marginTop="@dimen/margin_16dp"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivError"
        tools:text="@string/there_is_no_such_region" />

    <ProgressBar
        android:id="@+id/search_progressBar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilSearch" />

</androidx.constraintlayout.widget.ConstraintLayout>